--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -1,10 +1,12 @@
-FROM astrabert/local-search-application:latest
+FROM python:3.10.14-slim-bookworm
 
 WORKDIR /app
 
-RUN mkdir -p /app/scripts
+ADD . /app/
 
-ADD ./scripts/*.py /app/scripts/
+RUN python3 -m pip cache purge
+RUN python3 -m pip install --no-cache-dir -r requirements.txt
+RUN python3 -m nltk.downloader all
 
 EXPOSE 7860
 
